changed bake to log

--- a/CalorieCount-App/unit1_project/index.html
+++ b/CalorieCount-App/unit1_project/index.html
@@ -26,7 +26,7 @@
     <button type ='button' class = 'myRecents'>myRecents</button>
     </div>
     <form class ='search'>
-      <input type='text' placeholder = 'What do you want to bake?'/>
+      <input type='text' placeholder = 'What do you want to log?'/>
     </form>
     <div class = 'middle'>
     <div class = 'display'>
